--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+spring.application.name=fsweb-s17d2
+
+server.servlet.context-path=/workintech
+
+server.port=8585
+
+spring.devtools.restart.quite-period=1000
+spring.devtools.restart.poll-interval=2000
+
+management.info.env.enabled=true
+management.endpoints.web.exposure.include=info,health,mappings
+info.app.name=S7D2 dependency injection
+info.app.description=workintech workspace
+info.app.version=v1
+
+project.developer.fullname=Kenan Turgay
+course.name=java-parttime
+#Actuator
+
 
